--- a/RHoK-cipher/index.html
+++ b/RHoK-cipher/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="./assets/ico/favicon.png">
 
-    <title>Starter Template for Bootstrap</title>
+    <title>RHoK: Cipher Challenge (Team Fairycakes)</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./assets/css/bootstrap.css" rel="stylesheet">
